--- a/css/style.css
+++ b/css/style.css
@@ -304,14 +304,12 @@ body {
     position: absolute;
     width: 88%;
     padding: 20px;
-    /* margin: auto; */
-    /* text-align: center; */
-    border-radius: 4px;
+    border-radius: 2px;
     background: #fdfdfd;
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.05);
     opacity: 0;
     visibility: hidden;
-    transition: opacity .4s;
+    transition: opacity .8s;
 }
 
 #menu:after {
@@ -329,7 +327,7 @@ body {
     padding: 5px;
     color: #000;
     display: inline-block;
-    transition: all .2s;
+    transition: 0s;
     letter-spacing: 1px;
     font-size: 15px;
     margin-bottom: 6px;
