--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -11595,7 +11595,7 @@ a:focus {
 }
 
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
+  background: url("../images/2.jpg");
   background-position: center;
   background-size: cover;
 }
